# python-project-lvl3

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
page_loader/: cli.py  load.py  logging.py
page_loader/scripts/: page_loader.py
tests/: test_load.py
tests/fixtures/: data
